# LyricFinder

./: .gitignore  README.md  pyproject.toml
lyric/: Green Day - American Idiot.txt
lyricfinder/: cli.py  local_tools.py  scraper.py
